Fixed reply of comments and captcha in /comments/post/

--- a/cyclope/templates/comments/comments_block.html
+++ b/cyclope/templates/comments/comments_block.html
@@ -12,14 +12,29 @@
             $('#form-comment').hide();
         }
 
+        function show_reply_form(event) {
+            var $this = $(this);
+            var comment_id = $this.data('comment-id');
+
+            $('#id_parent').val(comment_id);
+            $('#form-comment').insertAfter($this.closest('.comment'));
+            $('#form-comment').show();
+            show_comment_captcha();
+        };
+
+        function show_comment_captcha() {
+                var captcha_img = $('#form-comment img');
+                captcha_img.attr("src", captcha_img.attr("src_"))
+        };
+
         jQuery(document).ready(function(){
+            $('.comment_reply_link').click(show_reply_form);
             $('#cancel_reply').click(cancel_reply_form);
             $('#form-comment').hide();
 
             $('#show_comment_form').click(function() {
                 cancel_reply_form();
-                var captcha_img = $('#form-comment img');
-                captcha_img.attr("src", captcha_img.attr("src_"))
+                show_comment_captcha();
                 $('#form-comment').toggle();
             });
         });
