Reworked Media Player based on MediaElements.js. Contribution of Santiago García.

--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_teaser.html
@@ -26,6 +26,9 @@
 
   {% include "cyclope/author_block.html" with author=current_object.author %}
 
+  {% block player %}
+  {% endblock %}
+
   <div class="clear"></div>
 
 </div>
