--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
@@ -1,1 +1,6 @@
 {% extends "medialibrary/medialibrary_base_teaser.html" %}
+
+
+{% block player %}
+  {% include 'medialibrary/media_player.html' %}
+{% endblock %}
