--- a/cyclope/templates/cyclope/related_contents_block.html
+++ b/cyclope/templates/cyclope/related_contents_block.html
@@ -10,10 +10,19 @@
       <li class='related_type {{ relation.grouper }}'>
         <ul>
         {% for rel in relation.list %}
-        {% alias rel.other_object as 'content' %}
-        <li class='related_content {{ content.get_object_name }}'>
-          <a href="{{ content.get_absolute_url }}">{{ content.name }}</a>
-        </li>
+            {% with current_object=rel.other_object %} 
+                <li class='related_content {{ current_object.get_object_name }}'>
+                    <a href="{{ current_object.get_absolute_url }}">{{ current_object.name }} </a> 
+                        {% if current_object.media_file %} 
+                            <a target="_blank" href="{{ current_object.media_file }}">({% trans "download file" %})</a>
+                        {% endif %}
+                    {% with type=current_object.get_object_name player_video_height='180' player_video_width='240' %}
+                        {% if type == 'soundtrack' or type == 'movieclip' %}
+                            {% include 'medialibrary/media_player.html' %}
+                        {% endif %}
+                    {% endwith %}
+                </li>
+            {% endwith %}
         {% endfor %}
       </ul>
       </li>
