Added icons to related contents items

--- a/cyclope/templates/cyclope/related_contents_block.html
+++ b/cyclope/templates/cyclope/related_contents_block.html
@@ -10,10 +10,11 @@
       <li class='related_type {{ relation.grouper }}'>
         <ul>
         {% for rel in relation.list %}
-            {% with current_object=rel.other_object %} 
+            {% with current_object=rel.other_object %}
                 <li class='related_content {{ current_object.get_object_name }}'>
-                    <a href="{{ current_object.get_absolute_url }}">{{ current_object.name }} </a> 
-                        {% if current_object.media_file %} 
+                    <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/{{ current_object.get_object_name }}.png" />
+                    <a href="{{ current_object.get_absolute_url }}">{{ current_object.name }} </a>
+                        {% if current_object.media_file %}
                             <a target="_blank" href="{{ current_object.media_file }}">({% trans "download file" %})</a>
                         {% endif %}
                     {% with type=current_object.get_object_name player_video_height='180' player_video_width='240' %}
