--- a/cyclope/core/collections/templates/collections/category_contents_base.html
+++ b/cyclope/core/collections/templates/collections/category_contents_base.html
@@ -4,20 +4,22 @@
 
 {% block content %}
 
-  {% per_category_perms category as cat_perms %}
-  {% if cat_perms.add_content %}
-  <div class="category_add_content">
-    <span onClick="$(this).siblings('ul').toggle()">{% trans "Add content" %}</span>
-    <ul class="content_types" style="display:none;">
-      {% for c_type in category.collection.content_types.all %}
-      <li>
-        <a href="/admin/{{ c_type.app_label }}/{{ c_type.model }}/add?_frontend=1&_popup=1&_from_category={{category.slug}}" class="add_content add_{{ c_type.model }}">
-          {{ c_type.name.capitalize }}
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
+  {% if not request.hide_frontend_edit %}
+    {% per_category_perms category as cat_perms %}
+    {% if cat_perms.add_content %}
+    <div class="category_add_content">
+      <span onClick="$(this).siblings('ul').toggle()">{% trans "Add content" %}</span>
+      <ul class="content_types" style="display:none;">
+        {% for c_type in category.collection.content_types.all %}
+        <li>
+          <a href="/admin/{{ c_type.app_label }}/{{ c_type.model }}/add?_frontend=1&_popup=1&_from_category={{category.slug}}" class="add_content add_{{ c_type.model }}">
+            {{ c_type.name.capitalize }}
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+    {% endif %}
   {% endif %}
 
   {% if view_options.navigation == "TOP" %}
