Newsletter header is now smart_style rendered

--- a/cyclope/templates/cyclope/themes/neutronix/newsletter.html
+++ b/cyclope/templates/cyclope/themes/neutronix/newsletter.html
@@ -102,7 +102,7 @@
             <tr>
               <td height="124" valign="middle">
                 <h1 class="title">{{ newsletter.name }}</h1>
-                <span class="summary">{{ newsletter.header }}</span>
+                <span class="summary">{{ newsletter.header|smart_style }}</span>
               </td>
             </tr>
           </table>
