Fixed AddThis rss link

--- a/cyclope/templates/cyclope/sharing_content.html
+++ b/cyclope/templates/cyclope/sharing_content.html
@@ -11,7 +11,7 @@
   {% endfor %}
   {% endif %}
   {% if options.show_rss %}
-    <a class="addthis_button_rss_follow" addthis:userid="rss"></a>
+    <a class="addthis_button_rss_follow" addthis:userid="/rss"></a>
   {% endif %}
 </div>
 {% endblock %}
