First version of social app

--- a/cyclope/apps/social/templates/social/action_teaser.html
+++ b/cyclope/apps/social/templates/social/action_teaser.html
@@ -1,5 +1,9 @@
-{% load i18n %}{% if action.actor.get_absolute_url %}<a href="{{ action.actor.get_absolute_url }}">{{ action.actor }}</a>
-{% else %}<a href="{{ action.actor_url }}">{{ action.actor }}</a>{% endif %}
+{% load i18n %}
+{% if action.actor.get_absolute_url %}
+ <a href="{{ action.actor.get_absolute_url }}">{{ action.actor }}</a>
+{% else %}
+ <a href="{{ action.actor_url }}">{{ action.actor }}</a>
+{% endif %}
 {{ action.verb }}
 {% if action.action_object %}
   <a href="{{ action.action_object.get_absolute_url }}">{{ action.action_object }}</a>
