--- a/cyclope/core/user_profiles/templates/profiles/profile_content.html
+++ b/cyclope/core/user_profiles/templates/profiles/profile_content.html
@@ -4,39 +4,22 @@
 
 <script>
 $(function() {
-    function follow_unfollow_urls(url){
-        if (url.indexOf("unfollow") === -1){
-            following = true;
-        } else {
-            following = false;
-        }
-
-        follow_url = url.replace("un", "");
-        unfollow_url = follow_url.replace("follow", "unfollow");
-            return {"follow_url": follow_url, "unfollow_url": unfollow_url,
-                    "following": following};
-    }
 
     function follow_unfollow_button(el){
-        console.log($(el).attr("url"));
-        ffobject = follow_unfollow_urls($(el).attr("url"));
-
+        ffobject = {"follow_url": $(el).attr("urlFollow"), "unfollow_url":  $(el).attr("urlUnfollow"),
+                    "following": $(el).attr("following") === "true"}
         render = function (){
-            console.log("render");
-            text = this.ffobject.following ? '{% trans "Unfollow" %}' : '{% trans "Follow" %}';
+            text = {% if request.user.is_authenticated %} this.ffobject.following ? '{% trans "Unfollow" %}' : '{% trans "Follow" %}' {% else %} '{% trans "Please" %} <a href="{% url 'auth_login' %}?next={% firstof request.path '/' %}">{% trans "login" %}</a> {% trans "to follow" %}.'{% endif %};
             return this.el.innerHTML = text;
-
         }
         toggle = function (){
             this.ffobject.following = !this.ffobject.following;
         }
         click = function (){
-            $.post(this.ffobject.following ? this.ffobject.follow_url : this.ffobject.unfollow_url)
+            $.post(this.ffobject.following ? this.ffobject.unfollow_url : this.ffobject.follow_url)
             this.toggle();
             this.render();
         }
-
-
         obj = {"render": render, "toggle": toggle, "ffobject": ffobject, "el": el, "click": click}
         $(el).click(function(){obj.click()});
         obj.render();
@@ -46,8 +29,7 @@ $(function() {
 });
 </script>
 
-<div class="follow-unfollow" url="{% follow_url current_object.user %}">
-</div>
+<div class="follow-unfollow" urlUnfollow="{% unfollow_url current_object.user %}"  urlFollow="{% actual_follow_all_url current_object.user %}" following="{% if request.user|is_following:current_object.user %}true{% else %}false{% endif %}"></div>
 
 <div class="activity"><a href="{% actor_url current_object.user %}">{% trans "Activity" %}</a></div>
 
