--- a/cyclope/core/collections/templates/collections/collection_categories_hierarchy_item.html
+++ b/cyclope/core/collections/templates/collections/collection_categories_hierarchy_item.html
@@ -1,5 +1,5 @@
 {% load url from future %}
-<span class="{{ has_children }} {{ has_content}}">
+<span class="{{ has_children }}">
   <a href="{% url target_view slug %}">{{ name }}</a>
 </span>
 
