Added empty cyclope.js and moved addThis code to bottom of base.html

--- a/cyclope/templates/cyclope/themes/neutronix/base.html
+++ b/cyclope/templates/cyclope/themes/neutronix/base.html
@@ -42,13 +42,11 @@
     {% endif %}
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.min.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/menuitems.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/cyclope.js" ></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/lightbox/js/jquery.lightbox-0.5.pack.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/uni-form.jquery.min.js" ></script>
     {% if CYCLOPE_SITE_SETTINGS.enable_ratings %}
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/ratings.js" ></script>
-    {% endif %}
-    {% if CYCLOPE_SITE_SETTINGS.enable_share_buttons or CYCLOPE_SITE_SETTINGS.enable_follow_buttons %}
-        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
     {% endif %}
     <script type="text/javascript">
     $(function() {
@@ -94,5 +92,8 @@
   {% include "cyclope/themes/neutronix/footer.html" %}
 </div><!-- /end mask -->
 {% endblock %}
+{% if CYCLOPE_SITE_SETTINGS.enable_share_buttons or CYCLOPE_SITE_SETTINGS.enable_follow_buttons %}
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
+{% endif %}
 </body>
 </html>
