--- a/cyclope/core/user_profiles/templates/profiles/profile_content.html
+++ b/cyclope/core/user_profiles/templates/profiles/profile_content.html
@@ -1,4 +1,5 @@
-{% load i18n fb_versions activity_tags %}
+{% load i18n fb_versions activity_tags social %}
+{% load url from future %}
 
 <h1 class="title">{{ current_object.user.get_full_name|default:current_object.user.username }}</h1>
 
