--- a/cyclope/core/collections/templates/admin/collections/category/change_form.html
+++ b/cyclope/core/collections/templates/admin/collections/category/change_form.html
@@ -1,4 +1,10 @@
 {% extends "admin/change_form.html" %}
+{% load i18n %}
+
+{% block object-tools-items %}
+<li><a href="../../categorization/?category__id__exact={{ object_id }}" class="orderelements">{% trans "View and sort objects" %}</a></li>
+{{ block.super }}
+{% endblock %}
 
 
 {% block after_related_objects %}
