--- a/cyclope/templates/cyclope/related_contents_block.html
+++ b/cyclope/templates/cyclope/related_contents_block.html
@@ -4,7 +4,7 @@
   {% if content_relations %}
   {% regroup content_relations by other_type as relations %}
   <div class="related_contents">
-    <span>{% trans "Related:" %} </span>
+    <span class="title">{% trans "Related:" %} </span>
     <ul>
     {% for relation in relations %}
       <li class='related_type {{ relation.grouper }}'>
